tests/baselines/reference/i3.errors.txt
i3.ts(6,1): error TS2322: Type 'I3' is not assignable to type '{ one: number; }'.
  Property 'one' is optional in type 'I3' but required in type '{ one: number; }'.


==== i3.ts (1 errors) ====
    interface I3 { one?: number; }; 
    var x: {one: number};
    var i: I3;
    
    i = x;
    x = i;
    ~
!!! error TS2322: Type 'I3' is not assignable to type '{ one: number; }'.
!!! error TS2322:   Property 'one' is optional in type 'I3' but required in type '{ one: number; }'.